# playpen-laser-measles-mcp

./: .gitmodules  README.md  pyproject.toml
projects/getting-started/: README.md  plan.md  satellite_hub_measles.py
projects/something-interesting/: 01_single_patch_outbreak.py  02_r0_comparison.py  03_spatial_spread.py  04_vaccination_impact.py  05_immunity_gaps.py  analysis.md
src/project/: __init__.py
